# lubancat_ai_manual_code

example/: README.md  scaling_frequency.sh
example/ppocrv5/cpp/: CMakeLists.txt  build-linux.sh  main.cc
example/ppocrv5/cpp/rknpu2/: ppocrv5.cc
example/yolo26/cpp/: CMakeLists.txt  build-linux.sh  postprocess_det.cc  postprocess_det.h  postprocess_obb.cc  postprocess_obb.h  postprocess_pose.cc  postprocess_pose.h  postprocess_seg.cc  postprocess_seg.h  yolo26_det.h  yolo26_det_demo.cc  yolo26_obb.h  yolo26_obb_demo.cc  yolo26_pose.h  yolo26_pose_demo.cc  yolo26_seg.h  yolo26_seg_demo.cc
example/yolo26/cpp/rknpu2/: yolo26_det.cc  yolo26_det_rv1106_1103.cc  yolo26_obb.cc  yolo26_pose.cc  yolo26_seg.cc
example/yolo26/python/: yolo26_det.py
example/yolo26/tools/: onnx2rknn.py  onnx2rknn_pose.py
example/yolov5_seg/cpp/: CMakeLists.txt
example/yolov5face/cpp/: CMakeLists.txt  build-linux.sh  main.cc  yolov5face.h
example/yolov5face/cpp/rknpu2/: yolov5face_rv1106.cc
example/yolov5face/python/: onnx2rknn.py
example/yolov8/yolov8_det/cpp/: CMakeLists.txt
example/yolov8/yolov8_pose/cpp/: build-linux.sh
example/yolov8/yolov8_seg/cpp/: CMakeLists.txt  build-linux.sh
